tests/lean/noncomp_hott.hlean
noncomputable definition foo := 10
